--- a/fe-jeopardy/src/app/app.component.html
+++ b/fe-jeopardy/src/app/app.component.html
@@ -1,9 +1,8 @@
-<div class="toolbar" role="banner">
-	<h2>Jeopardy</h2>
-	<div class="spacer"></div>
+<div class='toolbar flex-row' role="banner">
+	<h2>Jeopardy!</h2>
 </div>
 
 
-<div class="content" role="main">
+<div role="main">
 	<router-outlet></router-outlet>
 </div>
