--- a/fe-jeopardy/src/app/app.component.less
+++ b/fe-jeopardy/src/app/app.component.less
@@ -1,12 +1,3 @@
-.content {
-    display: flex;
-    margin: 82px auto 32px;
-    padding: 0 16px;
-    max-width: 960px;
-    flex-direction: column;
-    align-items: center;
-}
-
 :host {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     font-size: 14px;
@@ -16,51 +7,17 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    margin: 8px 0;
-}
-
-p {
-    margin: 0;
-}
-
-.spacer {
-    flex: 1;
-}
-
 .toolbar {
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
-    height: 60px;
-    display: flex;
+    height: var(--header-height);
     align-items: center;
-    background-color: #060ce9;
+    background-color: var(--jeopardy-blue);
     color: white;
-    font-weight: 600;
 
     h2 {
         margin-left: 1em;
     }
-}
-
-.toolbar img {
-    margin: 0 16px;
-}
-
-a,
-a:visited,
-a:hover {
-    color: #1976d2;
-    text-decoration: none;
-}
-
-a:hover {
-    color: #125699;
 }
