--- a/fe-jeopardy/src/app/game/game.component.less
+++ b/fe-jeopardy/src/app/game/game.component.less
@@ -1,7 +1,48 @@
+#players-container {
+    position: fixed;
+    right: 0;
+    top: var(--header-height);
+    width: var(--players-container-width);
+    height: calc(100vh - var(--header-height));
+    border-left: 1px solid black;
+
+    .player-box {
+        justify-content: center;
+        text-align: center;
+        padding: 10px;
+        border-bottom: 1px solid black;
+
+        p {
+            overflow-wrap: break-word;
+        }
+    }
+}
+
+#game-container {
+    position: fixed;
+    left: 0;
+    top: var(--header-height);
+    height: calc(100vh - var(--header-height) - 10px);
+    width: calc(100% - var(--players-container-width));
+    display: flex;
+    justify-content: center;
+
+    #game-state {
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+
+        #countdown-bar {
+            height: 15px;
+            gap: 1px;
+        }
+    }
+}
+
 #jeopardy-music {
     position: fixed;
-    left: 10px;
-    top: 70px;
+    left: 15px;
+    top: calc(var(--header-height) + 15px);
 
     ion-icon {
         font-size: 2em;
@@ -38,45 +79,6 @@
 
         p {
             margin: 0;
-        }
-    }
-}
-
-#joinLink {
-    color: blue;
-    text-decoration: underline;
-}
-
-#joinLink:hover {
-    cursor: pointer;
-}
-
-#copyLink:hover {
-    cursor: pointer;
-    transform: scale(1.1);
-}
-
-.container {
-    position: fixed;
-    right: 0;
-    top: 60px;
-    width: 120px; // TODO: adjust as needed
-    height: calc(100vh - 60px); // ACCOUNT FOR TOOLBAR HEIGHT
-    display: flex;
-    flex-direction: column;
-    border-left: 1px solid black;
-
-    .box {
-        flex: 1; // equally distribute the space
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        text-align: center;
-        padding: 10px;
-        border-bottom: 1px solid black;
-
-        p {
-            overflow-wrap: break-word;
         }
     }
 }
