--- a/fe-jeopardy/src/app/game/recv-vote/recv-vote.component.html
+++ b/fe-jeopardy/src/app/game/recv-vote/recv-vote.component.html
@@ -1,19 +1,13 @@
-<div *ngIf="player.CanVote()">
+<div>
     <div>
-        <p>Category: {{ game.CurCategory() }}</p>
-        <p *ngIf="game.CurComments() != ''">Comments: {{ game.CurComments() }}</p>
-        <p class='question-text'>Question: {{ game.CurQuestion() }}</p>
-        <p>Value: {{ game.CurValue() }}</p>
+        <app-question></app-question>
     </div>
     <p>
-        {{ game.LastToAnswer() }} answered <b>{{ game.AnsCorrectness() ? "correctly" : "incorrectly" }}</b> with <b>{{
-            game.LastAnswer() }}</b>. <br>
+        {{ game.LastToAnswer() }} answered <b>{{ game.AnsCorrectness() ? "correctly" : "incorrectly" }}</b> with <b>{{ game.LastAnswer() }}</b>.
     </p>
-    <button (click)="handleVote(true)">Accept</button>
-    <button (click)="handleVote(false)">Challenge</button>
-</div>
-<p>seconds to vote: {{ countdownSeconds }}</p>
-
-<div *ngIf="!player.CanVote()">
-    Waiting for other players to accept or challenge the answer
+    <div id='vote-buttons' class='flex-row' *ngIf="player.CanVote()">
+        <button (click)="handleVote(true)">Accept</button>
+        <button (click)="handleVote(false)">Challenge</button>
+    </div>
+	<p *ngIf="!player.CanVote()"> Waiting for other players to accept or challenge the answer</p>
 </div>
