--- a/fe-jeopardy/src/app/join/join.component.less
+++ b/fe-jeopardy/src/app/join/join.component.less
@@ -1,33 +1,11 @@
-.card {
-    border-radius: 4px;
-    border: 1px solid #eee;
-    background-color: #fafafa;
-    height: 40px;
-    width: 200px;
-    padding: 16px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    transition: all 0.2s ease-in-out;
-    line-height: 24px;
-}
+.join-container {
+    gap: 30px;
 
-.card.card-small {
-    height: 16px;
-    width: 168px;
-}
-
-.card.highlight-card {
-    background-color: #1976d2;
-    color: white;
-    font-weight: 600;
-    border: none;
-    width: auto;
-    min-width: 30%;
-    position: relative;
-}
-
-.container input, .container button {
-    display: block;
+    #join-inputs, #join-buttons {
+        gap: 15px;
+    }
+    
+    hr {
+        margin: 0;
+    }
 }
