--- a/fe-jeopardy/src/app/link-join/link-join.component.html
+++ b/fe-jeopardy/src/app/link-join/link-join.component.html
@@ -1,2 +1,6 @@
-<input type="text" [(ngModel)]="playerName" placeholder="Enter your name">
-<button (click)="joinGame(playerName, gameCode)">Join game</button>
+<div class='join-container flex-column'>
+    <input type="text" [(ngModel)]="playerName" placeholder="Enter your name">
+    <div class='flex-row'>
+        <button (click)="joinGame(playerName, gameCode)">Join game</button>
+    </div>
+</div>
