--- a/fe-jeopardy/src/app/game/game.component.less
+++ b/fe-jeopardy/src/app/game/game.component.less
@@ -11,9 +11,20 @@
         text-align: center;
         padding: 10px;
         border-bottom: 1px solid black;
+        gap: 10px;
 
-        p {
-            overflow-wrap: break-word;
+        ion-icon {
+            font-size: 2em;
+        }
+
+        .player-score {
+            align-items: flex-end;
+            display: flex;
+            justify-content: center;
+        }
+
+        .player-name {
+            word-break: break-word;
         }
     }
 }
