add errors modals

--- a/fe-jeopardy/src/app/game/game.component.html
+++ b/fe-jeopardy/src/app/game/game.component.html
@@ -45,3 +45,5 @@
 		<source src="../../assets/jeopardy_music.mp3" />
 	</audio>
 </div>
+
+<app-modal *ngIf="showModal" (closeModal)="showModal = false" [message]='modalMessage'></app-modal>
