--- a/fe-jeopardy/src/app/join/join.component.html
+++ b/fe-jeopardy/src/app/join/join.component.html
@@ -15,3 +15,5 @@
     
     <button (click)="rejoin()">Disconnected? Click to rejoin</button>
 </div>
+
+<app-modal *ngIf="showModal" (closeModal)="showModal = false" [message]='modalMessage'></app-modal>
