--- a/fe-jeopardy/src/app/game/chat/chat.component.less
+++ b/fe-jeopardy/src/app/game/chat/chat.component.less
@@ -51,7 +51,7 @@
         }
 
         .chat-message:nth-child(odd) {
-            background-color: lightblue;
+            background-color: var(--jeopardy-lightblue);
         }
 
         .chat-message:nth-child(even) {
