--- a/fe-jeopardy/src/styles.less
+++ b/fe-jeopardy/src/styles.less
@@ -1,5 +1,6 @@
 :root {
     --jeopardy-blue: #060ce9;
+    --jeopardy-lightblue: #d7ebff;
     --jeopardy-yellow: #ffcc00;
     --header-height: 60px;
     --players-container-width: 120px;
