--- a/fe-jeopardy/src/app/app.component.less
+++ b/fe-jeopardy/src/app/app.component.less
@@ -20,4 +20,15 @@
     h2 {
         margin-left: 1em;
     }
+
+    ion-icon {
+        float: right;
+        margin-right: 1em;
+        font-size: 2em;
+    }
+
+    ion-icon:hover {
+        cursor: pointer;
+        transform: scale(1.1);
+    }
 }
