--- a/fe-jeopardy/src/app/modal/modal.component.less
+++ b/fe-jeopardy/src/app/modal/modal.component.less
@@ -7,25 +7,24 @@
     }
 }
 
-#modal-container {
+.modal-container {
     position: fixed;
     left: 50%;
     transform: translate(-50%);
     top: calc(var(--header-height) + 15px);
     width: calc(600px - 4em);
-    background-color: #d7ebff;
+    background-color: var(--jeopardy-lightblue);
     border: 2px solid var(--jeopardy-blue);
     display: flex;
     flex-direction: column;
     animation: fadeInMoveUp 2s ease-out;
     padding: 2em;
-    gap: 2em;
 
-    #modal-message {
+    .modal-message {
 
-        p {
+        h3, p {
             margin: 0;
-            font-size: 1.5em;
+            margin-bottom: 1em;
         }
     }
 }
