--- a/fe-jeopardy/src/app/game/board-intro/board-intro.component.html
+++ b/fe-jeopardy/src/app/game/board-intro/board-intro.component.html
@@ -1,5 +1,5 @@
 <div class='question-board'>
-    <p>{{ game.PickingPlayer() }} will select a category first</p>
+    <p>{{ game.PickingPlayer() }} will pick a question first</p>
     <table>
         <tr>
             <td class='category-title' *ngFor="let title of categories">
