--- a/fe-jeopardy/src/app/join/join.component.less
+++ b/fe-jeopardy/src/app/join/join.component.less
@@ -4,6 +4,13 @@
     #join-inputs, #join-buttons {
         gap: 15px;
     }
+
+    #bots-container {
+        p {
+            text-align: center;
+            margin-bottom: 0;
+        }
+    }
     
     hr {
         margin: 0;
