--- a/fe-jeopardy/src/app/app.component.html
+++ b/fe-jeopardy/src/app/app.component.html
@@ -3,7 +3,7 @@
 		<h2>Jeopardy!</h2>
 	</div>
 	<div>
-		<ion-icon (click)="modalComponent.showJeopardyInfo()" name="information-circle-outline"></ion-icon>
+		<ion-icon (click)="modalComponent.showJeopardyInfo(false)" name="information-circle-outline"></ion-icon>
 	</div>
 </div>
 
