--- a/fe-jeopardy/src/app/modal/modal.component.html
+++ b/fe-jeopardy/src/app/modal/modal.component.html
@@ -12,7 +12,7 @@
 <div *ngIf='showInfo' class='modal-container'>
     <div class='modal-message'>
         <h3>Jeopardy Info</h3>
-        <p>It seems like this is your first time playing!
+        <p><span *ngIf="firstTime">It seems like this is your first time playing!</span>
             This is a multiplayer Jeopardy game.
             It should be familiar to anyone who has seen it on TV, but there are a few differences to make it playable online. 
             Please take a moment to carefully ready the info below, paying close attention to the <b>bolded</b> sections.
