--- a/fe-jeopardy/src/styles.less
+++ b/fe-jeopardy/src/styles.less
@@ -55,6 +55,7 @@ button:hover {
     font-weight: bold;
     border-radius: 5px;
     user-select: none;
+    margin: 0 auto;
 }
 
 .question-category {
