--- a/fe-jeopardy/src/app/game/game.component.less
+++ b/fe-jeopardy/src/app/game/game.component.less
@@ -93,3 +93,47 @@
         }
     }
 }
+
+#pause-game {
+    position: fixed;
+    left: 15px;
+    top: calc(var(--header-height) + 60px);
+
+    ion-icon {
+        font-size: 2em;
+    }
+
+    ion-icon:hover {
+        cursor: pointer;
+        transform: scale(1.1);
+    }
+
+    @keyframes moveUpDown {
+
+        0%,
+        1000% {
+            transform: translateY(0);
+        }
+
+        50% {
+            transform: translateY(-5px);
+        }
+    }
+
+    #pause-info {
+        animation: moveUpDown 1s infinite;
+
+        ion-icon {
+            font-size: 1em;
+        }
+
+        ion-icon:hover {
+            cursor: default;
+            transform: none;
+        }
+
+        p {
+            margin: 0;
+        }
+    }
+}
