--- a/fe-jeopardy/src/app/game/recv-pick/recv-pick.component.html
+++ b/fe-jeopardy/src/app/game/recv-pick/recv-pick.component.html
@@ -1,6 +1,6 @@
 <div class='question-board'>
     <p [ngStyle]="{'visibility': game.PreviousQuestion() != '' ? 'visible' : 'hidden'}">Previous question: {{ game.PreviousQuestion() }} </p>
-    <p [ngStyle]="{'visibility': game.PreviousAnswer() != '' ? 'visible' : 'hidden'}">Previous answer: <b>{{ game.PreviousAnswer() }}</b></p>
+    <p style='display: inline-block; margin-top: 0;' [ngStyle]="{'visibility': game.PreviousAnswer() != '' ? 'visible' : 'hidden'}">Previous answer: <b>{{ game.PreviousAnswer() }}</b></p><button id='dispute-button' *ngIf="showDispute()" (click)="disputeQuestion()">Dispute</button>
     <table>
         <tr>
             <td class='category-title' *ngFor="let title of categories">
