--- a/fe-jeopardy/src/app/modal/modal.component.html
+++ b/fe-jeopardy/src/app/modal/modal.component.html
@@ -49,3 +49,26 @@
         </button>
     </div>
 </div>
+
+<div *ngIf='showDisputeModal' class='modal-container'>
+    <div class='modal-message'>
+        <h3>Dispute</h3>
+        <p>{{ game.LastToAnswer() }} has disputed the previous question.</p>
+        <p>Previous question: {{ game.PreviousQuestion() }}</p>
+        <p>Previous answer: {{ game.LastAnswer() }}</p>
+        <p>This was marked as incorrect, based on an official answer of "{{ game.PreviousAnswer() }}".</p>
+        <p>Should the answer have been marked as correct?</p>
+    </div>
+    
+    <div *ngIf='!votedDispute'>
+        <button (click)="disputeQuestion(true)">
+            Yes, {{ game.LastToAnswer() }}'s answer was correct.
+        </button>
+        <button (click)="disputeQuestion(false)">
+            No, {{ game.LastToAnswer() }}'s answer was incorrect.
+        </button>
+    </div>
+    <div *ngIf='votedDispute'>
+        <p>Waiting for other players to confirm the dispute...</p>
+    </div>
+</div>
