--- a/fe-jeopardy/src/app/game/post-game/post-game.component.html
+++ b/fe-jeopardy/src/app/game/post-game/post-game.component.html
@@ -5,7 +5,7 @@
         <div class='question-box'>
             {{ game.CurQuestion() }}
         </div>
-        <p>Final Jeopardy Answer: <b>{{ game.PreviousAnswer() }}</b></p>
+        <p>Final Jeopardy Answer: <b>{{ game.OfficialAnswer() }}</b></p>
     </div>
     
 
