--- a/fe-jeopardy/src/app/modal/modal.component.html
+++ b/fe-jeopardy/src/app/modal/modal.component.html
@@ -54,6 +54,10 @@
     <div class='modal-message'>
         <h3>Dispute</h3>
         <p>{{ game.DisputerName() }} has disputed the previous question.</p>
+        <p *ngIf="game.AnsweredCorrectly()">
+            Overturning this question will remove ${{ game.CurValue() }} from {{ game.CorrectAnswerer() }} and return it to {{ game.DisputerName() }}.
+            {{ game.DisputerName() }} will also pick the next question.
+        </p>
         <p>Previous question: {{ game.CurQuestion() }}</p>
         <p>Official answer: <b>{{ game.OfficialAnswer() }}</b></p>
         <p>{{ game.DisputerName() }}'s answer: <b>{{ game.DisputerAnswer() }}</b></p>
