--- a/fe-jeopardy/src/app/game/game.component.html
+++ b/fe-jeopardy/src/app/game/game.component.html
@@ -48,8 +48,8 @@
 	</div>
 	
 	<div id='pause-game' *ngIf='!game.InDispute()' class='game-control'>
-		<ion-icon (click)="resumeGame()" *ngIf="game.IsPaused()" name="play"></ion-icon>
-		<ion-icon (click)="pauseGame()" *ngIf="!game.IsPaused()" name="pause"></ion-icon>
+		<ion-icon (click)="pauseGame(false)" *ngIf="game.IsPaused()" name="play"></ion-icon>
+		<ion-icon (click)="pauseGame(true)" *ngIf="!game.IsPaused()" name="pause"></ion-icon>
 		<div class='control-info' *ngIf="showPauseGame">
 			<ion-icon name="chevron-up-outline"></ion-icon>
 			<p>Click to pause the game</p>
